src/objects/CustomObject16__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>商談（カスタム）</relationshipLabel>
        <relationshipName>Rel_Acc_Opp</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>フェーズ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>商談中</fullName>
                </value>
                <value>
                    <fullName>受注</fullName>
                </value>
                <value>
                    <fullName>失注</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>受注予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>受注金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>商談（カスタム）</label>
    <nameField>
        <label>商談名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>